negative_tests/core/test_cmdqueue_errors/kernels/gpu_hang.cl
/*
 *
 * Copyright (C) 2022 Intel Corporation
 *
 * SPDX-License-Identifier: MIT
 *
 */

kernel void hang() {
    while(1);
}
